Enhance immersive navigator
